# open-license-manager

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  example.cpp
src/tools/license-generator/: CMakeLists.txt
